tests/samples/negative/types/noncopy_use_after_move.ax
module noncopy_use_after_move;

noncopy struct Owner {
    value: i32;
}

fn make_owner(value: i32) -> Owner {
    return Owner { value: value };
}

fn main() -> i32 {
    let first: Owner = make_owner(1);
    let second: Owner = move(first);
    return first.value + second.value;
}
